fixed background color change when overflow would happen

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     padding: 0;
     font-family: 'Roboto', sans-serif;
     height: 100vh;
+    background-color: #f4f4f4;
 }
 
 main {
